# PulsarVenv

./: .gitignore  CMakeLists.txt  README.md  WinPulsar.cpp  main.cpp  maincfg.pcfg  wp.h
.obsidian/: workspace.json
SystemPuls/systemcfg/: maincfg.pcfg
SystemPuls/systemmodules/watt/systeminfo/: sysinfo.wt
accounts/: forgithub.0
forwebsite/: version.txt
public/documentation/: PulsarCommandHelp.txt  RUDOC.md  STYLERU.md
public/source/: AccountManager.cpp  WinPulsar.cpp  chembd.cpp  main.cpp  pulsFileSystem.cpp  wp.h
public/source/LunixPulsar/: linuxPulsar.cpp  linuxPulsar.h
public/source/WindowsPulsar/: pulsFileSystem.cpp  pulsFileSystem.h  winPulsar.cpp  winPulsar.h
src/: main.cpp
src/commandHandler/: CommandHandler.cpp  CommandHandler.h
src/core/: PulsarCore.cpp  PulsarCore.h
src/filesystem/: PulsarFilesystem.cpp  PulsarFilesystem.h
src/include/toml++/: toml.h
src/itils/split/: split.cpp  split.h
src/profile/: PulsarProfileManager.cpp  PulsarProfileManager.h
src/startup/: PulsarStartup.cpp  PulsarStartup.h
src/utils/: utils.cpp  utils.h
src/utils/clearScreen/: clear_screen.cpp
src/utils/other_utils/: other_utils.cpp  other_utils.h
src/utils/split/: split.cpp  split.h
system/: log.pulslog  maincfg.toml
system/help/: enghelp.txt  ruhelp.txt
system/locale/: eng_ENG.toml  ru_RU.toml  standard_locale.toml
system/profiles/zero/settings/: config.toml
system/themes/: 3d.txt  blur.txt  bonsai.txt  doom.txt  doomvenv.txt  elite.txt  graffity.txt  merlin.txt  money.txt  orge.txt  standard.txt
